update: alteraçao no layout da home

--- a/resume.html
+++ b/resume.html
@@ -22,9 +22,9 @@
 
   <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0">lauri</h3>
+    
 
-      <nav class="nav nav-masthead justify-content-center  float-md-end">
+      <nav class="nav nav-masthead  fixed-top justify-content-center  float-md-end">
         
         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         <a class="nav-link" href="about.html">About</a>
@@ -89,8 +89,13 @@
 
 
 
+<div class="mt-2">
+  
+</div>
 
-
+<div class="mt-5">
+  
+</div>
 
 
 
